@@ -4,6 +4,7 @@
 - Fixed bug in notification events related with specific courses
 - Fixed logout redirecting to https pages
 - Fixed modules not appearing in lesson settings for professors that their primary type is 'student'
+- Fixed bug about displaying search results in pages that sidebar was refreshed
 
 === Version 3.6.4 build 7725 ===
 - Rearranged system settings menu for speed and tidyness
